syntax = "proto3";

package environments_registry;

import "util-message.proto";

service EnvironmentsRegistryService {
    rpc RegisterEnvironment(EnvironmentName) returns (EnvironmentKey) {}
    rpc GetEnvironmentRegistryKey(EnvironmentName) returns (EnvironmentKey) {}
    rpc DeregisterEnvironment(EnvironmentKey) returns (Empty) {}
}

message EnvironmentName {
    required string name = 1;
}

message EnvironmentKey {
    required string key = 2;
}
